Issue #878: move auth and acknowledgement forwarding from ConnectionPersistenceActor to OutboundDispatchingActor; add InboundSignal; fix deserialization of null event metadata.
Signed-off-by: Yufei Cai <yufei.cai@bosch.io>